# pathrex

./: .dockerignore  .gitattributes  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docker/: docker-entrypoint.sh
docs/superpowers/specs/: 2026-04-27-extract-c-wrappers-design.md
pathrex/: Cargo.toml
pathrex-sys/: Cargo.toml  README.md  build.rs
pathrex-sys/src/: lib.rs
pathrex/src/: lib.rs  utils.rs
pathrex/src/cli/: args.rs
pathrex/src/cli/bench/: estimates.rs  runner.rs
pathrex/src/eval/: mod.rs
pathrex/src/graph/: mod.rs
pathrex/src/rpq/: nfarpq.rs
pathrex/tests/testdata/cases/con-any/: expected.txt
pathrex/tests/testdata/mm_graph/: 2.txt  4.txt  6.txt  8.txt  9.txt  edges.txt  vertices.txt
src/: lagraph_sys.rs  lagraph_sys_generated.rs  lib.rs  utils.rs
src/cli/: args.rs  bench.rs  checkpoint.rs  dispatch.rs  loader.rs  mod.rs  output.rs  query.rs
src/cli/bench/: error.rs  mod.rs  runner.rs
src/formats/: csv.rs  mm.rs  mod.rs  nt.rs  rdf.rs
src/graph/: inmemory.rs  mod.rs  wrappers.rs
src/rpq/: mod.rs  nfarpq.rs  rpqmatrix.rs
src/rpq/rpqmatrix/: eval.rs  mod.rs  optimizer.rs  plan.rs
src/sparql/: mod.rs
tests/: inmemory_tests.rs  mm_tests.rs  nfarpq_tests.rs  rpqmatrix_tests.rs
tests/testdata/cases/any-any/: expected.txt  queries.txt
tests/testdata/cases/any-con/: expected.txt  queries.txt
tests/testdata/cases/con-any/: queries.txt
tests/testdata/mm_graph/: 1.txt  3.txt  5.txt  7.txt
