[package]
name = "pathrex"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
libc = "0.2"
oxrdf = "0.3.3"
oxttl = "0.2.3"
spargebra = "0.4.6"
thiserror = "1.0"

[features]
regenerate-bindings = ["bindgen"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen = { version = "0.71", optional = true }
