[package]
name = "pathrex-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native FFI bindings for SuiteSparse:GraphBLAS and LAGraph used by the pathrex crate."
links = "lagraph"

[features]
default = []
regenerate-bindings = ["dep:bindgen"]

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.71", optional = true }
